Fix recent things spacing, template gets absolute paths

--- a/docs/style.css
+++ b/docs/style.css
@@ -3,7 +3,7 @@
 body {
 	font-family: Rubik, sans-serif;
 	font-size: 13px;
-	line-height: 1.4;
+	line-height: 1.5;
 	margin: 22px 3%;
 }
 
